# ai-mental-health-detection

./: .gitignore  .replit  README.md  pyproject.toml  replit.md  requirements.txt  streamlit_app.py
attached_assets/: Pasted-Work-on-my-existing-Streamlit-AI-mental-health-detectio_1775672309083.txt  Pasted-You-are-an-expert-Python-developer-working-on-my-existi_1775669581691.txt  Pasted-You-are-helping-me-update-my-B-Tech-major-project-repor_1775726373981.txt  Pasted-You-are-working-on-my-existing-Streamlit-AI-mental-heal_1775673696057.txt  Report_format_&_general_guidelines_1775725784074.doc
audio/: speech_to_text.py
configs/: default.yaml
models/: emotion_model.pkl  emotion_vectorizer.pkl  mental_health_model.pkl  mental_health_vectorizer.pkl
scripts/: build_combined_dataset.py  train_emotion_model.py  train_mental_health_model.py
src/ai_mental_health_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ai_mh_detection/: __init__.py  config.py
src/ai_mh_detection/audio/: audio_processor.py
src/ai_mh_detection/chatbot/: __init__.py  chatbot.py
src/ai_mh_detection/dashboard/: app.py
src/ai_mh_detection/emotion/: __init__.py  emotion_detector.py
src/ai_mh_detection/prediction/: __init__.py  mental_health_predictor.py
src/ai_mh_detection/preprocessing/: text_preprocessor.py
src/ai_mh_detection/recommendation/: __init__.py  recommender.py
src/ai_mh_detection/utils/: __init__.py  io.py
tests/: test_imports.py
